fixed a bug that prevents Island problem having a visualiser

--- a/v1/test/results.html
+++ b/v1/test/results.html
@@ -19,12 +19,12 @@
 			</tr>
 			<tr>
 				<td>HC</td>
-				<td>NegativeRastrigin</td>
-				<td>-2.0409</td>
-				<td>[-0.998543474172838 -0.979313941616599]</td>
+				<td>Island</td>
+				<td>20.7544</td>
+				<td>[34.2400427509106 148.128452166378]</td>
 				<td>1</td>
-				<td>40.1889</td>
-				<td>40.1889</td>
+				<td>0.31258</td>
+				<td>0.31258</td>
 			</tr>
 		</table>
 
