commit before working

--- a/v1/test/results.html
+++ b/v1/test/results.html
@@ -19,12 +19,12 @@
 			</tr>
 			<tr>
 				<td>HC</td>
-				<td>Island</td>
-				<td>20.7544</td>
-				<td>[34.2400427509106 148.128452166378]</td>
+				<td>NegativeRastrigin</td>
+				<td>-17.0332</td>
+				<td>[0.989465966281595 -4.00369322856698]</td>
 				<td>1</td>
-				<td>0.31258</td>
-				<td>0.31258</td>
+				<td>1.2727</td>
+				<td>1.2727</td>
 			</tr>
 		</table>
 
