prettier time vs height graph

--- a/v1/test/results.html
+++ b/v1/test/results.html
@@ -16,15 +16,30 @@
 				<td>runcnt</td>
 				<td>timecnt</td>
 				<td>timeavg</td>
+				<td>algolog</td>
+				<td>graphtitle</td>
 			</tr>
 			<tr>
 				<td>CS</td>
 				<td>NegativeRastrigin</td>
-				<td>-12.057</td>
-				<td>[-3.03294912444871 1.08717014512648]</td>
+				<td>-5.7841e-009</td>
+				<td>[-9.67457019532536e-007 5.31215592996911e-006]</td>
 				<td>1</td>
-				<td>37.7592</td>
-				<td>37.7592</td>
+				<td>3.2939</td>
+				<td>3.2939</td>
+				<td>&nbsp;</td>
+				<td>NegativeRastrigin with CS</td>
+			</tr>
+			<tr>
+				<td>CS</td>
+				<td>Island</td>
+				<td>28.7727</td>
+				<td>[31.4597924698803 403.464527331553]</td>
+				<td>1</td>
+				<td>3.2072</td>
+				<td>3.2072</td>
+				<td>&nbsp;</td>
+				<td>Island with CS</td>
 			</tr>
 		</table>
 
