--- a/v1/test/results.html
+++ b/v1/test/results.html
@@ -21,25 +21,14 @@
 			</tr>
 			<tr>
 				<td>CS</td>
-				<td>NegativeRastrigin</td>
-				<td>-5.7841e-009</td>
-				<td>[-9.67457019532536e-007 5.31215592996911e-006]</td>
+				<td>LiftSysProb(nlifts:3 requests:[1 0 1 1 0 1 1 1 0 1 1 1 1 0 1 1 1 0])</td>
+				<td>-42</td>
+				<td>[2 3 2 2 1 1 3 2 2 1 2 3 1]</td>
 				<td>1</td>
-				<td>3.2939</td>
-				<td>3.2939</td>
+				<td>18.9338</td>
+				<td>18.9338</td>
 				<td>&nbsp;</td>
-				<td>NegativeRastrigin with CS</td>
-			</tr>
-			<tr>
-				<td>CS</td>
-				<td>Island</td>
-				<td>28.7727</td>
-				<td>[31.4597924698803 403.464527331553]</td>
-				<td>1</td>
-				<td>3.2072</td>
-				<td>3.2072</td>
-				<td>&nbsp;</td>
-				<td>Island with CS</td>
+				<td>LiftSysProb(nlifts:3 requests:[1 0 1 1 0 1 1 1 0 1 1 1 1 0 1 1 1 0]) with CS</td>
 			</tr>
 		</table>
 
