CuckooSearch and ParticleSwarmOptimization works nicely. Still trying to writ optimizer optimizer.

--- a/v1/test/results.html
+++ b/v1/test/results.html
@@ -16,19 +16,96 @@
 				<td>runcnt</td>
 				<td>timecnt</td>
 				<td>timeavg</td>
-				<td>algolog</td>
+				<td>count</td>
 				<td>graphtitle</td>
 			</tr>
 			<tr>
-				<td>CS</td>
-				<td>LiftSysProb(nlifts:3 requests:[1 0 1 1 0 1 1 1 0 1 1 1 1 0 1 1 1 0])</td>
-				<td>-42</td>
-				<td>[2 3 2 2 1 1 3 2 2 1 2 3 1]</td>
+				<td>CSout</td>
+				<td>SCC</td>
+				<td>-97465.281</td>
+				<td>WM:[0 21 200;75 79 0;25 0 0]PW:[0 150 0;221 4 25]SP:[114 186;36 64]</td>
 				<td>1</td>
-				<td>18.9338</td>
-				<td>18.9338</td>
+				<td>5.1548</td>
+				<td>5.1548</td>
 				<td>&nbsp;</td>
-				<td>LiftSysProb(nlifts:3 requests:[1 0 1 1 0 1 1 1 0 1 1 1 1 0 1 1 1 0]) with CS</td>
+				<td>SCC with CSout</td>
+			</tr>
+			<tr>
+				<td>PSO</td>
+				<td>SCC</td>
+				<td>-97701.8408</td>
+				<td>WM:[0 68 152;20 0 0;80 32 48]PW:[150 0 0;70 20 160]SP:[86 214;64 36]</td>
+				<td>1</td>
+				<td>5.0399</td>
+				<td>5.0399</td>
+				<td>&nbsp;</td>
+				<td>SCC with PSO</td>
+			</tr>
+			<tr>
+				<td>CSout</td>
+				<td>NegativeRastrigin</td>
+				<td>-8.1226</td>
+				<td>[-2.03348739773701 -0.873312760525025]</td>
+				<td>1</td>
+				<td>6.3551</td>
+				<td>6.3551</td>
+				<td>&nbsp;</td>
+				<td>NegativeRastrigin with CSout</td>
+			</tr>
+			<tr>
+				<td>PSO</td>
+				<td>NegativeRastrigin</td>
+				<td>-0.016215</td>
+				<td>[0.00651759220266081 -0.00626612035811374]</td>
+				<td>1</td>
+				<td>6.4404</td>
+				<td>6.4404</td>
+				<td>&nbsp;</td>
+				<td>NegativeRastrigin with PSO</td>
+			</tr>
+			<tr>
+				<td>CSout</td>
+				<td>LiftSysProb(nlifts:3 requests:[1 0 1 1 0 1 1 1 0 1 1 1 1 0 1 1 1 0])</td>
+				<td>-30</td>
+				<td>[2 3 3 1 1 1 2 2 2 2 3 3 1]</td>
+				<td>1</td>
+				<td>3.586</td>
+				<td>3.586</td>
+				<td>&nbsp;</td>
+				<td>LiftSysProb(nlifts:3 requests:[1 0 1 1 0 1 1 1 0 1 1 1 1 0 1 1 1 0]) with CSout</td>
+			</tr>
+			<tr>
+				<td>PSO</td>
+				<td>LiftSysProb(nlifts:3 requests:[1 0 1 1 0 1 1 1 0 1 1 1 1 0 1 1 1 0])</td>
+				<td>-52</td>
+				<td>[2 2 1 2 2 1 3 3 3 2 1 3 1]</td>
+				<td>1</td>
+				<td>3.8457</td>
+				<td>3.8457</td>
+				<td>&nbsp;</td>
+				<td>LiftSysProb(nlifts:3 requests:[1 0 1 1 0 1 1 1 0 1 1 1 1 0 1 1 1 0]) with PSO</td>
+			</tr>
+			<tr>
+				<td>CSout</td>
+				<td>Island</td>
+				<td>22.7238</td>
+				<td>[20 34]</td>
+				<td>1</td>
+				<td>7.2833</td>
+				<td>7.2833</td>
+				<td>&nbsp;</td>
+				<td>Island with CSout</td>
+			</tr>
+			<tr>
+				<td>PSO</td>
+				<td>Island</td>
+				<td>22.6032</td>
+				<td>[26 277]</td>
+				<td>1</td>
+				<td>6.8426</td>
+				<td>6.8426</td>
+				<td>&nbsp;</td>
+				<td>Island with PSO</td>
 			</tr>
 		</table>
 
