optimizeroptimizerproblem is ok.

--- a/v1/problemObjects/results.html
+++ b/v1/problemObjects/results.html
@@ -20,26 +20,15 @@
 				<td>graphtitle</td>
 			</tr>
 			<tr>
-				<td>CSout</td>
-				<td>SCC</td>
-				<td>-77233.3634</td>
-				<td>WM:[65 86 107;0 14 0;35 0 93]PW:[119 0 0;139 14 128]SP:[36 264;83 17]</td>
-				<td>1</td>
-				<td>4.0822</td>
-				<td>4.0822</td>
-				<td>&nbsp;</td>
-				<td>SCC with CSout</td>
-			</tr>
-			<tr>
 				<td>PSO</td>
-				<td>SCC</td>
-				<td>-77409.2772</td>
-				<td>WM:[53 0 80;0 0 0;47 100 120]PW:[58 0 81;75 0 186]SP:[90 210;49 51]</td>
+				<td>NegativeRastrigin</td>
+				<td>-1.4495e-012</td>
+				<td>[-8.47537546073061e-008 -1.07444325282618e-008]</td>
 				<td>1</td>
-				<td>4.4885</td>
-				<td>4.4885</td>
+				<td>37.0513</td>
+				<td>37.0513</td>
 				<td>&nbsp;</td>
-				<td>SCC with PSO</td>
+				<td>NegativeRastrigin with PSO</td>
 			</tr>
 		</table>
 
